libapache2-mod-chxj (0.6.3-1) unstable; urgency=low

  * bug fix which the size before it converts it into Content-Length when HEAD of 
    the image conversion is requested is returned. 

 -- Atsushi Konno <konn@users.sourceforge.jp>  Mon, 19 Jun 2006 17:29:48 +0900

libapache2-mod-chxj (0.6.2-1) unstable; urgency=low

  * Fix bug which operates the character-code conversion when PC
    accesses it.

 -- Atsushi Konno <konn@users.sourceforge.jp>  Mon, 19 Jun 2006 17:29:48 +0900

libapache2-mod-chxj (0.6.1-1) unstable; urgency=low

  * Adding ChxjConvertRule directive
  * To execute regcomp when the definition file is read, it changes. 
  * Adding Input and output character-code conversion function addition
  * h tag p tag pre tag textarea tag ul (Excluding HDML) tag ol tag li tag addition. 
  * Some bug fix. 
  * For some FreeBSD

 -- Atsushi Konno (konn@user.sourceforge.jp) Sun Jun 18 18:27:52 JST 2006
